<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="24dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginTop="122dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_text"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/detail_text"
        android:textColor="@android:color/black"
        android:layout_marginBottom="27dp"/>
    
    <!-- 행복 -->
    <ImageView
        android:id="@+id/happyImage"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_emotion_happy"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/happyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_text"
        android:textColor="@color/emotion_selector"
        android:textSize="19sp"
        android:layout_marginBottom="19dp"
        />

    <!-- 흥분 -->
    <ImageView
        android:id="@+id/excitedImage"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_emotion_excited"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp"
         />
    <TextView
        android:id="@+id/excitedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excited_text"
        android:textColor="@color/emotion_selector"
        android:textSize="19sp"
        android:layout_marginBottom="19dp"
        />

    <!-- 평범  -->
    <ImageView
        android:id="@+id/normalImage"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_emotion_normal"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_text"
        android:textColor="@color/emotion_selector"
        android:textSize="19sp"
        android:layout_marginBottom="19dp"
        />

    <!-- 불안  -->
    <ImageView
        android:id="@+id/anxiousImage"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_emotion_anxious"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/anxiousText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anxious_text"
        android:textColor="@color/emotion_selector"
        android:textSize="18sp"
        android:layout_marginBottom="19dp" />

    <!-- 화남  -->
    <ImageView
        android:id="@+id/angryImage"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_emotion_angry"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/angryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angry_text"
        android:textColor="@color/emotion_selector"
        />

    </LinearLayout>
</ScrollView>
